force-app/main/default/objects/SVMXC__PM_Plan__c/fields/SVMXC__Account__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Preventive Maintenance Plans</relationshipLabel>
    <relationshipName>Preventive_Maintenance_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>