force-app/main/default/objects/SVMXC__PM_Plan__c/fields/SVMXC__Activity_On_Error__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Activity_On_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Create an activity in PM Plan if Error occur in Execution</description>
    <label>Create Activity on Error</label>
    <type>Checkbox</type>
</CustomField>