force-app/main/default/objects/SVMXC__PM_Plan__c/fields/SVMXC__Activity_On_Success__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Activity_On_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Create an activity in PM Plan upon successful execution</description>
    <label>Create Activity on Success</label>
    <type>Checkbox</type>
</CustomField>