force-app/main/default/objects/SVMXC__PM_Plan__c/fields/SVMXC__Case_Assign_To_Queue__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Case_Assign_To_Queue__c</fullName>
    <description>Name of the Salesforce queue to assign the PM Case to</description>
    <label>Case Assign To Queue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>