force-app/main/default/objects/SVMXC__PM_Plan__c/fields/SVMXC__End_Date__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__End_Date__c</fullName>
    <description>End Date for the preventive maintenance plan</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>