force-app/main/default/objects/SVMXC__PM_Plan__c/fields/SVMXC__Field_map_for_Case__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Field_map_for_Case__c</fullName>
    <description>Field Mapping Id for creating the case</description>
    <label>Field map to use to create Case</label>
    <length>100</length>
    <type>Text</type>
</CustomField>