force-app/main/default/objects/SVMXC__PM_Plan__c/fields/SVMXC__Frequency__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Frequency__c</fullName>
    <description>Frequency to run the preventive maintenance plan if based on dates</description>
    <label>Frequency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>