force-app/main/default/objects/SVMXC__PM_Plan__c/fields/SVMXC__Frequency_Unit__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Frequency_Unit__c</fullName>
    <description>Unit of measure for frequency</description>
    <label>Frequency Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
                <default>true</default>
                <label>Days</label>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>