force-app/main/default/objects/SVMXC__PM_Plan__c/fields/SVMXC__Number_of_Failures__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Number_of_Failures__c</fullName>
    <description>Number of failures encountered when executing the PM plan. Updated automatically</description>
    <label>Number of Failures</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>