force-app/main/default/objects/SVMXC__PM_Plan__c/fields/SVMXC__Number_of_Work_orders__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Number_of_Work_orders__c</fullName>
    <description>Indicates how Work Orders will be created for a preventive maintenance plan: One per installed product or one per plan</description>
    <label>Number of Work orders</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One Per Product</fullName>
                <default>true</default>
                <label>One Per Product</label>
            </value>
            <value>
                <fullName>One Per Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>