force-app/main/default/objects/SVMXC__PM_Plan__c/fields/SVMXC__PM_Plan_Template__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__PM_Plan_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PM Plan Template</label>
    <referenceTo>SVMXC__PM_Plan_Template__c</referenceTo>
    <relationshipLabel>Preventive Maintenance Plans</relationshipLabel>
    <relationshipName>Preventive_Maintenance_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>