force-app/main/default/objects/SVMXC__PM_Plan__c/fields/SVMXC__Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Service_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Service/Maintenance Contract</description>
    <label>Service/Maintenance Contract</label>
    <referenceTo>SVMXC__Service_Contract__c</referenceTo>
    <relationshipName>PM_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>