force-app/main/default/objects/SVMXC__PM_Plan__c/fields/SVMXC__SM_Advanced_Expression__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Advanced_Expression__c</fullName>
    <label>Advanced Expression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>