force-app/main/default/objects/SVMXC__PM_Plan__c/fields/SVMXC__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Start_Date__c</fullName>
    <description>Start date for the preventive maintenance plan</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>