force-app/main/default/objects/SVMXC__PM_Plan__c/fields/SVMXC__Success_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Success_Email_ID__c</fullName>
    <description>Email ID to receive Success Notification</description>
    <label>Success Email</label>
    <type>Email</type>
</CustomField>