force-app/main/default/objects/SVMXC__PM_Plan__c/validationRules/CheckContractDurationLessThan1Year.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckContractDurationLessThan1Year</fullName>
    <active>false</active>
    <description>Prevent adding PM Plans when Service Contract duration is Less than 1 year</description>
    <errorConditionFormula>AND (
     (SVMXC__Service_Contract__r.SVMXC__End_Date__c -
      SVMXC__Service_Contract__r.SVMXC__Start_Date__c) &lt; 365,
      OR(
        ISNEW(),
        ISCHANGED(SVMXC__Service_Contract__c)
      )    
)</errorConditionFormula>
    <errorMessage>Preventive Maintenance Plan can not be associated with Service Contract of duration less than 1 year.</errorMessage>
</ValidationRule>