force-app/main/default/objects/SVMXC__PM_Plan__c/validationRules/SVMXC__PM_Plan_Start_End_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>SVMXC__PM_Plan_Start_End_Date_Validation</fullName>
    <active>false</active>
    <description>Start date of preventive maintenance plan cannot be less than end time.</description>
    <errorConditionFormula>IF( SVMXC__Start_Date__c &gt;  SVMXC__End_Date__c, true, false)</errorConditionFormula>
    <errorMessage>End date should be greater than start date of Preventive Maintenance Plan</errorMessage>
</ValidationRule>