force-app/main/default/objects/SVMXC__PM_Plan__c/listViews/SVMXC__All_Preventive_Plans.listView-meta.xml
<ListView>
    <fullName>SVMXC__All_Preventive_Plans</fullName>
    <columns>NAME</columns>
    <columns>SVMXC__Account__c</columns>
    <columns>SVMXC__Service_Contract__c</columns>
    <columns>SVMXC__Start_Date__c</columns>
    <columns>SVMXC__End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Preventive Plans</label>
    <language>en_US</language>
</ListView>